// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`doc.options 1`] = `
{
  "_directives": Directives {
    "atNextDocument": false,
    "docEnd": false,
    "docStart": null,
    "tags": {
      "!!": "tag:yaml.org,2002:",
    },
    "yaml": {
      "explicit": false,
      "version": "1.2",
    },
  },
  "allowEmptyDocument": true,
  "expandForwardSlashKeys": true,
  "intAsBigInt": false,
  "keepSourceTokens": false,
  "logLevel": "warn",
  "prettyErrors": true,
  "strict": true,
  "stringKeys": false,
  "toStringDefaults": {
    "allowMultiRoot": undefined,
    "blockQuote": true,
    "collectionStyle": "block",
    "defaultKeyType": "PLAIN",
    "defaultStringType": "PLAIN",
    "disableUniqueItemValues": undefined,
    "disableUnsafeQuote": undefined,
    "expandForwardSlashKeys": undefined,
    "minifyPrompts": undefined,
    "uniqueKeys": true,
  },
  "uniqueKeys": true,
  "version": "1.2",
}
`;

exports[`matchDynamicPromptsWildcards " __scope/season_clothes(season= )__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season= )__",
  "variables": "(season= )",
}
`;

exports[`matchDynamicPromptsWildcards " __scope/season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards " __season_clothes(season= )__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season= )__",
  "variables": "(season= )",
}
`;

exports[`matchDynamicPromptsWildcards " __season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__@scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "@",
  "name": "scope/season_clothes",
  "source": "__@scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__@season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "@",
  "name": "season_clothes",
  "source": "__@season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "scope/season_clothes",
  "source": "__~scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~scope/season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "scope/season_clothes",
  "source": "__~scope/season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__~season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "season_clothes",
  "source": "__~season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "season_clothes",
  "source": "__~season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__ __person/regular/haircolor-unconv(k=)__ __lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-*__" 1`] = `
[
  {
    "isFullMatch": false,
    "isStarWildcards": false,
    "keyword": undefined,
    "name": "lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main",
    "source": "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__",
    "variables": undefined,
  },
  {
    "isFullMatch": false,
    "isStarWildcards": false,
    "keyword": undefined,
    "name": "person/regular/haircolor-unconv",
    "source": "__person/regular/haircolor-unconv(k=)__",
    "variables": "(k=)",
  },
  {
    "isFullMatch": false,
    "isStarWildcards": true,
    "keyword": undefined,
    "name": "lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-*",
    "source": "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-*__",
    "variables": undefined,
  },
]
`;

exports[`matchDynamicPromptsWildcards "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main",
  "source": "__lazy-wildcards/subject/env-elem-creatures/butterfly/ env-elem-creatures-main__",
  "variables": undefined,
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!__scope/season_clothes__)__",
  "variables": "(season=!__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{!summer|autumn|winter|spring})__",
  "variables": "(season=!{!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{@summer|autumn|winter|spring})__",
  "variables": "(season=!{@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{summer|autumn|winter|spring})__",
  "variables": "(season=!{summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__@scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__@scope/season_clothes__)__",
  "variables": "(season=__@scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__~scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__~scope/season_clothes__)__",
  "variables": "(season=__~scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={!summer|autumn|winter|spring})__",
  "variables": "(season={!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={@summer|autumn|winter|spring})__",
  "variables": "(season={@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={summer|autumn|winter|spring})__",
  "variables": "(season={summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes__",
  "variables": undefined,
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!__season_clothes__)__",
  "variables": "(season=!__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{!summer|autumn|winter|spring})__",
  "variables": "(season=!{!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{@summer|autumn|winter|spring})__",
  "variables": "(season=!{@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{summer|autumn|winter|spring})__",
  "variables": "(season=!{summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__@season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__@season_clothes__)__",
  "variables": "(season=__@season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__~season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__~season_clothes__)__",
  "variables": "(season=__~season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={!summer|autumn|winter|spring})__",
  "variables": "(season={!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={@summer|autumn|winter|spring})__",
  "variables": "(season={@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={summer|autumn|winter|spring})__",
  "variables": "(season={summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes__",
  "variables": undefined,
}
`;

exports[`utils "\${c=!__lazy-wildcards/utils/color-base__} \\n__lazy-wildcards/subject/env-elem/sky_lantern/fn/sky_lantern__" 1`] = `"\${c=!__lazy-wildcards/utils/color-base__}__lazy-wildcards/subject/env-elem/sky_lantern/fn/sky_lantern__"`;

exports[`utils "\${person_description = { blond| redhead | brunette}, {green|blue|brown|hazel} eyes, {tall|average|short}}\\nA \${person_description} man and a \${person_description} woman" 1`] = `"\${person_description={ blond| redhead | brunette}, {green|blue|brown|hazel} eyes, {tall|average|short}}A \${person_description} man and a \${person_description} woman"`;

exports[`utils "\${v1=!{{very |}small |}} \\n __lazy-wildcards/subject/costume-ethnicity-breasts/tits-rocket/fn/rocket_tits__" 1`] = `"\${v1=!{{very |}small |}}__lazy-wildcards/subject/costume-ethnicity-breasts/tits-rocket/fn/rocket_tits__"`;
